Fix: low contrast issue with card text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,6 +29,14 @@ a {
     color: rgb(237, 233, 249)!important;
 }
 
+.navbar-toggler {
+    margin-right: 1rem;
+}
+
+.navbar-nav {
+    margin-right: 1.5rem;
+}
+
 .tag-line {
     padding: 1rem;
 }
@@ -55,15 +63,6 @@ a {
     background-color:rgb(237, 233, 249)!important;
 }
 
-.navbar-toggler {
-    margin-right: 1rem;
-}
-
-.navbar-nav {
-    margin-right: 1.5rem;
-}
-
-
 
 
 /* browse ideas page */
@@ -74,6 +73,14 @@ a {
     object-fit: cover;
 }
 
+/* card text */
+
+.card-text {
+    column-rule-color: #041121!important;
+}
+
+/* Idea detail page*/
+
 .ideas-detail-pic {
     width: 100%;
     height: 45vw;
@@ -81,7 +88,7 @@ a {
 }
 
 
-/* Idea detail page*/
+
 
 /* like and comment amount*/
 
